# locallens

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml  rust-wheels.yml  test.yml  wheels.yml
backend/: requirements.txt
backend/app/: auth.py  config.py  main.py  models.py
backend/app/extractors/: __init__.py  code.py  docx_ext.py  email_ext.py  epub_ext.py  liteparse_ext.py  obsidian_ext.py  pdf.py  spreadsheet.py  text.py
backend/app/routers/: ask.py  audit.py  auth.py  files.py  fs.py  index.py  namespaces.py  search.py  stats.py  voice.py  watcher.py
backend/app/services/: audit.py  bm25.py  embedder.py  indexer.py  rag.py  searcher.py  store.py  voice_stt.py  voice_tts.py  watcher.py
bench-results/: FINDINGS.md  bench_200.json  bench_200_post.json  bench_200_rust.json  bench_200_walker.json  bench_500.json  bench_500_post.json  bench_500_rust.json  bench_500_rust_v2.json  bench_500_walker.json  bench_50k_rust.json  bench_5k_rust.json
benchmarks/: FINDINGS.md  bench.py
claude-code-plugin/: README.md
claude-code-plugin/.claude-plugin/: plugin.json
claude-code-plugin/rules/: locallens-context.md
claude-code-plugin/skills/ask/: SKILL.md
claude-code-plugin/skills/doctor/: SKILL.md
claude-code-plugin/skills/index/: SKILL.md
claude-code-plugin/skills/search/: SKILL.md
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
docs/api/: data-classes.md  examples.md  exceptions.md  python-api.md
docs/cli/: ask-cmd.md  commands.md  doctor-cmd.md  index-cmd.md  json-output.md  search-cmd.md  serve-cmd.md  stats-cmd.md
docs/dashboard/: ask.md  overview.md  search.md  setup.md  voice.md
docs/guide/: architecture.md  configuration.md  faq.md  file-types.md  getting-started.md  installation.md  performance.md  quick-start.md  schema-evolution.md
docs/mcp/: claude-code.md  claude-desktop.md  cursor.md  custom-clients.md  openclaw.md  setup.md  tools-reference.md  windsurf.md
docs/mcp/configs/: claude-code.sh  claude-desktop.json
docs/public/: CNAME
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: AskPage.tsx  AuditPage.tsx  Dashboard.tsx  IndexPage.tsx  SearchPage.tsx  SettingsPage.tsx  StackPage.tsx  VoicePage.tsx
frontend/src/styles/: skeuomorphic.css
frontend/src/types/: index.ts
locallens/: __init__.py  _bm25_core.py  _file_core.py  _rust.py  _watcher.py  bm25.py  chunker.py  cli.py  config.py  dashboard.py  embedder.py  engine.py  fast.py  indexer.py  mcp_server.py  models.py  rag.py  schema.py  searcher.py  store.py  sync.py  voice.py
locallens/_internals/: _file_core.py  _rust.py  _watcher.py
locallens/extractors/: __init__.py  base.py  code.py  docx_ext.py  email_ext.py  epub_ext.py  liteparse_ext.py  obsidian_ext.py  pdf.py  spreadsheet.py  text.py
locallens/integrations/: sync.py  voice.py
locallens/pipeline/: bm25.py  chunker.py  embedder.py  indexer.py  query_parser.py  rag.py  schema.py  searcher.py  store.py
locallens/serve/: mcp_server.py
openclaw-skill/: README.md  SKILL.md  setup.sh
rust/: Cargo.toml  pyproject.toml
rust/bm25/: Cargo.toml
rust/bm25/src/: lib.rs
rust/bridge/: Cargo.toml
rust/bridge/src/: lib.rs
rust/chunker/: Cargo.toml
rust/chunker/src/: languages.rs  lib.rs
rust/core/: Cargo.toml
rust/core/src/: lib.rs
rust/walker/: Cargo.toml
rust/walker/src/: lib.rs
rust/watcher/: Cargo.toml
rust/watcher/src/: lib.rs
scripts/: bench_pipeline.py  test_install.sh
src/: bm25.rs  chunker.rs  lib.rs  walk.rs  watcher.rs
tests/: conftest.py  test_api.py  test_ask.py  test_bm25.py  test_chunker_parity.py  test_extractors.py  test_file_core.py  test_hybrid_search.py  test_index.py  test_namespace.py  test_plugins.py  test_query_parser.py  test_refine_search.py  test_rust_detection.py  test_schema.py  test_watcher_rust.py
