[package]
name = "locallens-rs"
version = "0.0.0"
edition = "2021"
publish = false
description = "Native acceleration crate for LocalLens. Inactive scaffold until src/lib.rs lands."

[lib]
name = "_locallens_rs"
crate-type = ["cdylib"]
# Intentionally missing: `cargo build` fails-closed until a follow-up PR
# lands the first Rust module. See plan 2 in
# /root/.claude/plans/1-fix-the-python-foamy-spindle.md for the rollout.
path = "src/lib.rs"

[dependencies]
# abi3-py311 → one compiled wheel per (os, arch) covers Python 3.11-3.13.
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py311"] }

# Optional deps are gated behind feature flags so they don't compile
# until the module that uses them actually lands.
rayon = { version = "1.10", optional = true }
# bincode 2.x changed the serde integration — pin to the 1.3.x series for
# now. Revisit when the Rust BM25 port actually wires it up.
bincode = { version = "1.3", optional = true }

[features]
default = []
parallel = ["dep:rayon"]
fast-serde = ["dep:bincode"]

[profile.release]
lto = "thin"
codegen-units = 1
