[package]
name = "locallens-rs"
version = "0.1.0"
edition = "2021"
publish = false
description = "Native BM25 + future chunker/walker acceleration crate for LocalLens."

[lib]
name = "_locallens_rs"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# abi3-py311 → one compiled wheel per (os, arch) covers Python 3.11-3.13.
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py311"] }

# Incremental BM25 state + persistence. Same JSON shape as the Python impl
# so both backends can read each other's indexes without migration.
regex = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Optional deps gated behind feature flags — reserved for the future
# chunker / file-walker / bincode modules.
rayon = { version = "1.10", optional = true }
bincode = { version = "1.3", optional = true }

[features]
default = []
parallel = ["dep:rayon"]
fast-serde = ["dep:bincode"]

[profile.release]
lto = "thin"
codegen-units = 1
