[package]
name = "locallens-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
publish = false
description = "Native BM25 + future chunker/walker acceleration crate for LocalLens."

[lib]
name = "_locallens_rs"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# abi3-py311 → one compiled wheel per (os, arch) covers Python 3.11-3.13.
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py311"] }

# BM25 state + persistence. Same JSON shape as the Python impl so both
# backends can read each other's indexes without migration.
regex = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File walker + parallel SHA-256 (src/walk.rs).
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
# Parallel hashing. Rayon's global pool auto-sizes to num_cpus; users can
# override via RAYON_NUM_THREADS.
rayon = "1.10"

# File system watcher (src/watcher.rs).
notify = "7"
notify-debouncer-full = "0.4"

# Reserved for future modules (bincode-backed persistence etc.).
bincode = { version = "1.3", optional = true }

[features]
default = []
fast-serde = ["dep:bincode"]

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
