[project]
name = "locallens"
dynamic = ["version"]
description = "Search your files by talking to them — 100% offline semantic search with voice"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.14"
authors = [{name = "Mahimai Raja", email = "hello@mahimai.dev"}]
keywords = ["semantic-search", "qdrant", "voice-assistant", "offline", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "qdrant-client>=1.13.0",
    "qdrant-edge-py>=0.6.0",
    "sentence-transformers>=3.0.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
voice = [
    "moonshine-voice>=0.0.50",
    "piper-tts>=1.4.0",
    "sounddevice>=0.5.0",
    "onnxruntime>=1.19.0",
]
parsing = [
    "liteparse>=0.1.0",
    "openpyxl>=3.1.0",
]
ocr = [
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
]
watch = [
    "watchdog>=4.0.0",
]
email = [
    "python-oletools>=0.60.0",
    "extract-msg>=0.48.0",
]
ebooks = [
    "ebooklib>=0.18",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "anyio[trio]>=4.0.0",
    "httpx>=0.27.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "anyio[trio]>=4.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[project.scripts]
locallens = "locallens.cli:app"

[project.entry-points."locallens.extractors"]
builtin_text = "locallens.extractors.text:TextExtractor"
builtin_pdf = "locallens.extractors.pdf:PdfExtractor"
builtin_docx = "locallens.extractors.docx_ext:DocxExtractor"
builtin_code = "locallens.extractors.code:CodeExtractor"
builtin_spreadsheet = "locallens.extractors.spreadsheet:SpreadsheetExtractor"
builtin_liteparse = "locallens.extractors.liteparse_ext:LiteParseExtractor"
builtin_email = "locallens.extractors.email_ext:EmailExtractor"
builtin_epub = "locallens.extractors.epub_ext:EpubExtractor"
builtin_obsidian = "locallens.extractors.obsidian_ext:ObsidianExtractor"

[tool.setuptools.packages.find]
include = ["locallens*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests that require Ollama or are long-running (deselect with '-m \"not slow\"')",
]

[project.urls]
Homepage = "https://github.com/mahimairaja/locallens"
Documentation = "https://github.com/mahimairaja/locallens#readme"
Repository = "https://github.com/mahimairaja/locallens"
Issues = "https://github.com/mahimairaja/locallens/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "locallens/_version.py"

[tool.pyright]
typeCheckingMode = "off"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.mypy]
# --- UPDATE THIS LINE ---
python_version = "3.11" #  project's minimum Python version
# ------------------------
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true # Can be helpful initially
