[workspace]
members = ["core", "bm25", "chunker", "walker", "watcher", "bridge"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"

[workspace.dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py311"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
unicode-segmentation = "1.11"
walkdir = "2.5"
sha2 = "0.10"
hex = "0.4"
notify = "7.0"
notify-debouncer-full = "0.4"
ignore = "0.4"
bincode = "1.3"
crossbeam-channel = "0.5"
tempfile = "3"
