[package]
name = "locallens-bm25"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
locallens-core = { path = "../core" }
pyo3 = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
