[package]
name = "locallens-walker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
locallens-core = { path = "../core" }
pyo3 = { workspace = true }
rayon = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
