[package]
name = "locallens-watcher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
locallens-core = { path = "../core" }
pyo3 = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
crossbeam-channel = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
